Fix splash screen overflow issue

--- a/src/global.css
+++ b/src/global.css
@@ -3,9 +3,10 @@ html, body {
   padding: 0;
   font-family: 'Inter', sans-serif;
   font-size: 16px;
-  height: 100%;
   color: #ccc;
   background-color: hsl(224, 35%, 8%);
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 h1, h2, h3, h4, h5, h6, .header {
